--- a/components/Typography/package.json
+++ b/components/Typography/package.json
@@ -11,7 +11,7 @@
     "build": "npm run clean && npm run bundle",
     "build:babel": "babel src -d dist",
     "prepublish": "npm run clean && npm run build",
-    "test": "npm run test",
+    "test": "jest ./tests",
     "clean": "shx rm -rf ./coverage && shx rm -rf ./dist",
     "lint:prettier": "prettier --write src/",
     "lint": "eslint --ext .js . --ignore-path ./.eslintignore --resolve-plugins-relative-to .",
@@ -29,6 +29,7 @@
     "babel-eslint": "10.1.0",
     "eslint": "8.16.0",
     "eslint-plugin-json": "3.1.0",
+    "jest": "^28.1.0",
     "prettier": "2.6.2",
     "rollup": "2.75.5",
     "rollup-plugin-includepaths": "0.2.4",
