--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "devDependencies": {
     "@babel/cli": "7.18.6",
     "@babel/core": "7.18.6",
+    "@babel/eslint-parser": "^7.18.2",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/preset-env": "7.18.6",
     "@rollup/plugin-babel": "5.3.1",
     "@rollup/plugin-commonjs": "22.0.1",
     "@rollup/plugin-node-resolve": "13.3.0",
     "babel-eslint": "10.1.0",
+    "babel-preset-react-app": "^10.0.1",
     "eslint": "8.18.0",
     "eslint-plugin-json": "3.1.0",
     "jest": "28.1.1",
@@ -49,10 +51,5 @@
   "dependencies": {
     "email-template-object": "^0.2.0",
     "markup-generator": "^0.5.0"
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "@root(.*)$": "<rootDir>/src/$1"
-    }
-  }
+  }  
 }
