--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "test": "jest ./tests --passWithNoTests",
     "clean": "shx rm -rf ./coverage && shx rm -rf ./dist",
     "lint:prettier": "prettier --write src/",
-    "lint": "eslint --ext .js . --ignore-path ./.eslintignore --resolve-plugins-relative-to .",
-    "lint:fix": "eslint --fix . --ignore-path ./.eslintignore --resolve-plugins-relative-to .",
-    "lint2:fix": "eslint --fix . --ignore-path ./.eslintignore --resolve-plugins-relative-to ."
+    "lint": "eslint -c ./eslintrc.js --ext .js . --ignore-path ./.eslintignore --resolve-plugins-relative-to .",
+    "lint:fix": "eslint -c ./eslintrc.js --fix . --ignore-path ./.eslintignore --resolve-plugins-relative-to ."
   },
   "devDependencies": {
     "@babel/cli": "7.18.6",
