--- a/components/Miscellaneous/package.json
+++ b/components/Miscellaneous/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atherdon-newsletter-react-layouts-miscellaneous",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "im trying to separate part of our code",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
@@ -21,12 +21,12 @@
   "devDependencies": {
     "@babel/cli": "7.18.6",
     "@babel/core": "7.18.6",
+    "@babel/eslint-parser": "^7.18.2",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/preset-env": "7.18.6",
     "@rollup/plugin-babel": "5.3.1",
     "@rollup/plugin-commonjs": "22.0.1",
     "@rollup/plugin-node-resolve": "13.3.0",
-    "babel-eslint": "10.1.0",
     "eslint": "8.19.0",
     "eslint-plugin-json": "3.1.0",
     "prettier": "2.7.1",
