--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "access": "public"
   },
   "dependencies": {
+    "atherdon-newsletter-react-layouts-innercomponents": "^0.2.0",
+    "atherdon-newsletter-react-layouts-miscellaneous": "^1.5.0",
+    "atherdon-newsletter-react-layouts-typography": "^0.3.0",
     "email-template-object": "^0.2.0",
     "markup-generator": "^0.5.0"
   }
