--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "8.19.0",
     "eslint-plugin-json": "3.1.0",
     "jest": "28.1.2",
+    "markup-generator": "^0.5.0",
     "prettier": "2.7.1",
     "rollup": "2.76.0",
     "rollup-plugin-includepaths": "0.2.4",
@@ -51,7 +52,6 @@
     "atherdon-newsletter-react-layouts-innercomponents": "^0.2.0",
     "atherdon-newsletter-react-layouts-miscellaneous": "^1.5.0",
     "atherdon-newsletter-react-layouts-typography": "^0.3.0",
-    "email-template-object": "^0.2.0",
-    "markup-generator": "^0.5.0"
+    "email-template-object": "^0.2.0"
   }
 }
